o COMPRESS-82:  cpio is terribly slow.
        Documented that buffered streams are needed for performance 
o Improved exception message if the extra field data in ZIP
        archives cannot be parsed. 
o COMPRESS-17:  Tar format unspecified - current support documented. 
o COMPRESS-94:  ZipArchiveEntry's equals method was broken for entries created
        with the String-arg constructor.  This lead to broken ZIP
        archives if two different entries had the same hash code. Thanks to Anon Devs. 
o COMPRESS-87:  ZipArchiveInputStream could repeatedly return 0 on read() when
        the archive was truncated. Thanks to Antoni Mylka. 
o COMPRESS-86:  Tar archive entries holding the file name for names longer
        than 100 characters in GNU longfile mode didn't properly
        specify they'd be using the "oldgnu" extension. 
o COMPRESS-83:  Delegate all read and write methods in GZip stream in order to
        speed up operations. 
o The ar and cpio streams now properly read and write last
        modified times. 
o COMPRESS-81:  TarOutputStream can leave garbage at the end of the archive 

Changes:
o COMPRESS-112:  ArArchiveInputStream does not handle GNU extended filename records (//) 
o COMPRESS-109:  Tar implementation does not support Pax headers
       Added support for reading pax headers.
       Note: does not support global pax headers 
o COMPRESS-105:  Document that the name of an ZipArchiveEntry determines whether
       an entry is considered a directory or not.
       If you don't use the constructor with the File argument the entry's
        name must end in a "/" in order for the entry to be known as a directory. 
o COMPRESS-79:  Move DOS/Java time conversions into Zip utility class. 

 
For complete information on Commons Compress, including instructions on how to submit bug reports,
patches, or suggestions for improvement, see the Apache Commons Compress website:

http://commons.apache.org/compress/

