@@ -45,6 +45,10 @@ The <action> type attribute can be add,update,fix,remove.
   </properties>
   <body>
     <release version="1.1" date="as in SVN" description="Release 1.1">
+      <action issue="COMPRESS-108" type="update" date="2010-05-23">
+       Command-line interface to list archive contents.
+       Usage: java -jar commons-compress-n.m.jar archive-name [zip|tar|etc]
+      </action>
       <action issue="COMPRESS-118" type="fix" date="2010-05-17">
        TarUtils.parseName does not properly handle characters outside the range 0-127
       </action>
